[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tiptilt"
dynamic = ["version"]
description = "Differentiable wavefront-error generation and wavefront control for the HWO direct imaging simulation suite"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "equinox>=0.12.0",
    "hwoutils",
    "jax>=0.4.1",
    "jaxlib>=0.4.1",
    "jaxtyping",
    "numpy",
    "optixstuff>=1.5.0",
    "physicaloptix>=0.2.0",
]

[project.optional-dependencies]
dev = ["pre-commit"]
test = ["pytest", "hypothesis", "pytest-cov", "pytest-xdist"]
docs = ["myst-nb", "sphinx-autoapi", "sphinx-book-theme"]

[tool.pytest.ini_options]
# Loop-convergence (physics regression) tests dominate the suite; run the
# suite parallel by default and keep a fast unit loop via -m "not slow".
addopts = "-n auto"
markers = [
    "slow: multi-step control-loop convergence (physics regression, seconds each)",
]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tiptilt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tiptilt"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
